# nyan

./: CLAUDE.md  LICENSE  README.md  frame.py  nyancat.py  pyproject.toml  requirements.md  schemes.py
bs/: install  lint  nyan  preview  record
nyan/: _nyan  frame.py  nyancat.py  schemes.py
